--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="profile-container">
           <img
             class="profile"
-            src="./img/HeadShot.jpeg"
+            src="./img/HeadShot.png"
             alt="Rodrigo Sotomayor"
           />
           <img class="ring" src="./img/Ring.svg" alt="Ring Border" />
@@ -381,7 +381,7 @@
       <section class="section contact">
         <div class="contact-links flex-start">
           <div class="profile-container">
-            <img class="profile" src="./img/HeadShot.jpeg" alt="Rodrigo Sotomayor" />
+            <img class="profile" src="./img/HeadShot.png" alt="Rodrigo Sotomayor" />
             <img class="ring" src="./img/Ring.svg" alt="Ring Border" />
           </div>
 
