Adds demo videos

--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
               <a href="https://holy-dream-7720.on.fleek.co/" class="card-button--site" target="_blank">Site</a>
               <a href="https://github.com/rsotomay/ai_nft_dapp" class="card-button--code" target="_blank">Code</a>
             </div>
+            <div class="card-buttons">
+                <a href="https://www.loom.com/share/e325372c1c5e4bdfa7b1b772c3e42e07?sid=e6d8b5a9-872a-40ca-98ab-0ba49f050fb0" class="card-button--presentation" target="_blank">Dapp Demo</a>
+                <a href="https://watch.screencastify.com/v/w3vgrXJfkhHUmijKMa9z" class="card-button--presentation" target="_blank">Code Demo</a>
+            </div>
+
           </div>
         </section>
 
