--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="profile-container">
           <img
             class="profile"
-            src="./img/HeadShot.png"
+            src="./img/headshot23.png"
             alt="Rodrigo Sotomayor"
           />
           <img class="ring" src="./img/Ring.svg" alt="Ring Border" />
@@ -87,24 +87,24 @@
         </h2>
 
         <ul class="achievements">
-            <li>
-                <a href="https://www.coursera.org/account/accomplishments/specialization/TX6U3TXSE3L3" target="_blank">
-                🏆 University of Buffalo - Blockchain Specialization Certificate
-                </a>
-            </li>
-            <li>
-                <a href="https://www.udemy.com/certificate/UC-d8532123-19e8-4e4e-aed5-36e6fa0164e6/" target="_blank">
-                    🏆 Udemy - The Complete javaScript Course 2023 Certificate
-                </a>
-            </li>
+          <li>
+            <a href="https://www.coursera.org/account/accomplishments/specialization/TX6U3TXSE3L3" target="_blank">
+              🏆 University of Buffalo - Blockchain Specialization Certificate
+            </a>
+          </li>
+          <li>
+            <a href="https://www.udemy.com/certificate/UC-d8532123-19e8-4e4e-aed5-36e6fa0164e6/" target="_blank">
+              🏆 Udemy - The Complete javaScript Course 2023 Certificate
+            </a>
+          </li>
           <li>
             <a href="https://www.udemy.com/certificate/UC-871a0d06-2fbf-4cce-9144-260727c50253/" target="_blank">
-                🏆 Udemy - The Complete Solidity Course Certificate
+              🏆 Udemy - The Complete Solidity Course certificate
             </a>
           </li>
           <li>
             <a href="https://www.udemy.com/certificate/UC-c834e941-49e4-4858-9ac6-e12b42c06323/" target="_blank">
-            🏆 Udemy - Complete Dapp Solidity & React Blockchain Development Certificate
+              🏆 Udemy - Complete Dapp Solidity & React Blockchain Development certificate
             </a>
           </li>
           <li>
@@ -375,7 +375,7 @@
       <section class="section contact">
         <div class="contact-links flex-start">
           <div class="profile-container">
-            <img class="profile" src="./img/HeadShot.png" alt="Rodrigo Sotomayor" />
+            <img class="profile" src="./img/headshot23.png" alt="Rodrigo Sotomayor" />
             <img class="ring" src="./img/Ring.svg" alt="Ring Border" />
           </div>
 
