--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <img src="./img/projects/DecentralArt-AI.png" alt="" />
             <h3 class="card-title">DecentralArt-AI</h3>
             <p class="card-description">
-              My custom decentralized AI artwork generator/NFT project
+              My custom decentralized AI artwork generator/NFT project on the sepolia testnet.
             </p>
 
             <div class="card-buttons">
@@ -149,8 +149,8 @@
               <a href="https://github.com/rsotomay/ai_nft_dapp" class="card-button--code" target="_blank">Code</a>
             </div>
             <div class="card-buttons">
-                <a href="https://www.loom.com/share/e325372c1c5e4bdfa7b1b772c3e42e07?sid=e6d8b5a9-872a-40ca-98ab-0ba49f050fb0" class="card-button--presentation" target="_blank">Dapp Demo</a>
-                <a href="https://watch.screencastify.com/v/w3vgrXJfkhHUmijKMa9z" class="card-button--presentation" target="_blank">Code Demo</a>
+                <a href="https://www.loom.com/share/e325372c1c5e4bdfa7b1b772c3e42e07?sid=e6d8b5a9-872a-40ca-98ab-0ba49f050fb0" class="card-button--demo" target="_blank">Dapp Demo</a>
+                <a href="https://watch.screencastify.com/v/w3vgrXJfkhHUmijKMa9z" class="card-button--demo" target="_blank">Code Demo</a>
             </div>
 
           </div>
