--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
                 <ul class="card-list">
                   <!-- <li class="card-list-item">Graduated with TBD GPA</li> -->
                   <li class="card-list-item">
-                    Studied Dapp development and meticulously crafted multiple full-stack dapps from the ground up with a diverse 
+                    Studied dapp development and meticulously crafted multiple full-stack dapps from the ground up with a diverse 
                     array of functionalities, including crowdfunding, DAOs, NFT drops, automated market makers, and an AI-NFT generator,
-                    utilizing hardhat, solidity, java script, ethers.js, react.js, redux and node.js.
+                    utilizing hardhat, solidity, javascript, ethers.js, react.js, redux and node.js.
                   </li>
                 </ul>
               </div>
