--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </h1>
 
       <ul class="contact-details flex-list">
-        <li>3305 Ranch Drive - Garland, TX 75041</li>
+        <li>Garland, Texas</li>
         <hr />
         <li>(972) 661-2053</li>
         <hr />
@@ -399,7 +399,7 @@
         <h1>Get in touch</h1>
 
         <ul class="contact-details flex-list">
-          <li>3305 Ranch Drive - Garland, TX 75041</li>
+          <li>Garland, Texas</li>
           <hr />
           <li>(972) 661-2053</li>
           <hr />
