Adds ICO project

--- a/index.html
+++ b/index.html
@@ -152,8 +152,18 @@
                 <a href="https://www.loom.com/share/e325372c1c5e4bdfa7b1b772c3e42e07?sid=e6d8b5a9-872a-40ca-98ab-0ba49f050fb0" class="card-button--demo" target="_blank">Dapp Demo</a>
                 <a href="https://watch.screencastify.com/v/w3vgrXJfkhHUmijKMa9z" class="card-button--demo" target="_blank">Code Demo</a>
             </div>
-
           </div>
+
+            <div class="card">
+              <img src="./img/projects/GSNT_ICO.png" alt="" />
+              <h3 class="card-title">GASton Token ICO</h3>
+              <p class="card-description">
+                My custom decentralized refundable initial coin offering (ICO) project.
+              </p>
+  
+              <div class="card-buttons">
+                <a href="https://github.com/rsotomay/gsnt_crowdsale_2" class="card-button--site" target="_blank">Code</a>
+              </div>  
         </section>
 
       <!-- EXPIERENCE -->
