Adds img resize

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
         <div class="cards flex-center">
           <div class="card">
-            <img src="./img/projects/DecentralArt-AI.png" alt="" />
+            <img src="./img/projects/DecentralArt_AI.png" alt="" />
             <h3 class="card-title">DecentralArt-AI</h3>
             <p class="card-description">
               My custom decentralized AI artwork generator/NFT project on the sepolia testnet.
@@ -155,7 +155,7 @@
           </div>
 
             <div class="card">
-              <img src="./img/projects/GSNT_ICO.png" alt="" />
+              <img src="./img/projects/GSNT-ICO.png" alt="" />
               <h3 class="card-title">GASton Token ICO</h3>
               <p class="card-description">
                 My custom decentralized refundable initial coin offering (ICO) project.
